📝 content: obsidian commit

--- a/src/css/blocks/emoji.css
+++ b/src/css/blocks/emoji.css
@@ -1,7 +1,3 @@
 .emoji {
-  display: inline-block;
-  height: 1em;
-  width: 1em;
-  margin: 0 0.05em 0 0.1em;
-  vertical-align: -0.1em;
+  font-family: "Noto Color Emoji", sans-serif;
 }
