--- a/src/layouts/base-without-header.njk
+++ b/src/layouts/base-without-header.njk
@@ -10,7 +10,7 @@
 		<!-- Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght,WONK@0,9..144,700,0;0,9..144,700,1;1,9..144,420,0;1,9..144,700,0;1,9..144,700,1&family=Nanum+Pen+Script&family=Work+Sans:ital,wght@0,400;0,622;1,400;1,622&display=swap">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght,SOFT,WONK@0,9..144,100..900,0..100,0;0,9..144,100..900,0..100,1;1,9..144,100..900,0..100,0;1,9..144,100..900,0..100,1&family=Nanum+Pen+Script&family=Noto+Color+Emoji&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap">
 
 		{%- include "meta.njk" -%}
 
