--- a/src/css/utilities/typography.css
+++ b/src/css/utilities/typography.css
@@ -10,5 +10,22 @@
   & > span {
     text-decoration: underline;
     text-decoration-skip-ink: auto;
+    text-decoration-color: currentColor;
+    transition-property: background-color, text-decoration-color;
+    transition-duration: 200ms;
+    transition-timing-function: var(--ease-2);
+  }
+
+  &:hover {
+    & > span {
+      text-decoration-color: transparent;
+      background-color: var(--accent-bg);
+    }
+  }
+
+  &:active {
+    & > span {
+      background-color: var(--accent-bg-hover);
+    }
   }
 }
