--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,6 +42,7 @@
 @import "./blocks/hero.css" layer(blocks);
 @import "./blocks/home.css" layer(blocks);
 @import "./blocks/icon-button.css" layer(blocks);
+@import "./blocks/icon.css" layer(blocks);
 @import "./blocks/lego.css" layer(blocks);
 @import "./blocks/logo.css" layer(blocks);
 @import "./blocks/markdown-container.css" layer(blocks);
