--- a/src/layouts/post.njk
+++ b/src/layouts/post.njk
@@ -7,14 +7,14 @@ layout: base-without-header.njk
 	<div class="[ flex gap-3 flex-wrap ]">
 		<span>
 			<sl-tooltip content="Last modified">
-				<sl-icon class="[ emoji ]" library="fa" name="far-calendar-plus" label="Last modified"></sl-icon>
+				<sl-icon class="[ icon ]" library="fa" name="far-calendar-plus" label="Last modified"></sl-icon>
 			</sl-tooltip>
 			<time class="[ date ]" datetime="{{ page.date | dateToISO }}">{{ page.date | dateToLocaleDateFull }}</time>
 		</span>
 		{%- if stage -%}
 			<span>
 				<sl-tooltip content="Stage">
-					<sl-icon class="[ emoji ]" library="fa" name="fas-{%- if stage === "seedling" -%}seedling{%- elif stage === "budding" -%}spa{%- elif stage === "evergreen" -%}tree{%- elif stage === "draft" -%}file-pen{%- elif stage === "complete" -%}circle-check{%- endif -%}" label="stage"></sl-icon>
+					<sl-icon class="[ icon ]" library="fa" name="fas-{%- if stage === "seedling" -%}seedling{%- elif stage === "budding" -%}spa{%- elif stage === "evergreen" -%}tree{%- elif stage === "draft" -%}file-pen{%- elif stage === "complete" -%}circle-check{%- endif -%}" label="stage"></sl-icon>
 				</sl-tooltip>
 				<span>{{ stage | sentenceCase }}</span>
 			</span>
@@ -26,7 +26,7 @@ layout: base-without-header.njk
 	<aside class="[ toc-container ][ flow content-width ]">
 		<details>
 			<summary class="[ flex ]">
-				<sl-icon class="[ emoji ]" library="fa" name="fas-play" label=""></sl-icon>
+				<sl-icon class="[ icon ]" library="fa" name="fas-play" label=""></sl-icon>
 				<h2>Table of contents</h2>
 			</summary>
 			{{ content | toc | safe }}
@@ -59,10 +59,10 @@ layout: base-without-header.njk
 <footer class="[ content-footer ][ flow flow-space-setter ]" style="--flow-space-setter: var(--size-8);">
 	<div class="[ share ]">
 		<p>
-			<sl-icon class="[ emoji ]" library="fa" name="fas-share-from-square" label=""></sl-icon> Share on <a href='https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text="{{ title }}" by @ellyloel' class="[ text-decoration-none move-link-styling-to-child ]">
-				<sl-icon class="[ emoji ]" style="vertical-align: -0.15em;" library="fa" name="fab-twitter" label=""></sl-icon>
+			<sl-icon class="[ icon ]" library="fa" name="fas-share-from-square" label=""></sl-icon> Share on <a href='https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text="{{ title }}" by @ellyloel' class="[ text-decoration-none move-link-styling-to-child ]">
+				<sl-icon class="[ icon ]" library="fa" name="fab-twitter" label=""></sl-icon>
 				<span>Twitter</span></a> or <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ site.url }}{{ page.url }}" class="[ text-decoration-none move-link-styling-to-child ]">
-				<sl-icon class="[ emoji ]" style="vertical-align: -0.15em;" library="fa" name="fab-linkedin" label=""></sl-icon>
+				<sl-icon class="[ icon ]" library="fa" name="fab-linkedin" label=""></sl-icon>
 				<span>LinkedIn</span></a>.
 		</p>
 	</div>
@@ -73,7 +73,7 @@ layout: base-without-header.njk
 			{%- if previousPost -%}
 				<sl-tooltip content="{{ previousPost.data.title }}">
 					<a href="{{ previousPost.url }}" class="[ text-decoration-none move-link-styling-to-child flex align-center gap-1 ]">
-						<sl-icon class="[ emoji ]" library="fa" name="fas-angle-left" label=""></sl-icon>
+						<sl-icon class="[ icon ]" library="fa" name="fas-angle-left" label=""></sl-icon>
 						<span>Prev Post</span>
 					</a>
 				</sl-tooltip>
@@ -82,7 +82,7 @@ layout: base-without-header.njk
 				<sl-tooltip content="{{ nextPost.data.title }}">
 					<a href="{{ nextPost.url }}" class="[ text-decoration-none move-link-styling-to-child flex align-center gap-1 ]">
 						<span>Next Post</span>
-						<sl-icon class="[ emoji ]" library="fa" name="fas-angle-right" label=""></sl-icon>
+						<sl-icon class="[ icon ]" library="fa" name="fas-angle-right" label=""></sl-icon>
 					</a>
 				</sl-tooltip>
 			{%- endif -%}
