📝 content: obsidian commit

--- a/src/css/blocks/card.css
+++ b/src/css/blocks/card.css
@@ -11,6 +11,10 @@
     transition: box-shadow 150ms var(--ease-1);
   }
 
+  &::part(image) {
+    margin-bottom: var(--size-3);
+  }
+
   &::part(base) {
     border-width: var(--border-size-2);
     border-color: var(--accent-bg-hover);
