--- a/src/css/blocks/hero.css
+++ b/src/css/blocks/hero.css
@@ -1,11 +1,18 @@
 .hero {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: auto var(--size-8) 1fr;
   align-items: center;
-  gap: var(--size-8);
 
   & h1 {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
     margin: 0;
+    z-index: 1;
+  }
+
+  & .lego-container {
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
   }
 
   & h1 > * {
