--- a/src/css/blocks/hero.css
+++ b/src/css/blocks/hero.css
@@ -1,18 +1,20 @@
 .hero {
   display: grid;
-  grid-template-columns: auto var(--size-8) 1fr;
   align-items: center;
+  justify-items: center;
+  grid-template-columns: 100%;
 
   & h1 {
-    grid-column: 1 / 3;
+    grid-column: 1 / 2;
     grid-row: 1 / 2;
     margin: 0;
     z-index: 1;
   }
 
   & .lego-container {
-    grid-column: 2 / 4;
-    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    max-inline-size: 100%;
   }
 
   & h1 > * {
@@ -31,6 +33,16 @@
   }
 
   @media (width >= 768px) {
-    flex-direction: row;
+    grid-template-columns: auto var(--size-8) 1fr;
+
+    & h1 {
+      grid-column: 1 / 3;
+      grid-row: 1 / 2;
+    }
+
+    & .lego-container {
+      grid-column: 2 / 4;
+      grid-row: 1 / 2;
+    }
   }
 }
