--- a/src/css/blocks/feed.css
+++ b/src/css/blocks/feed.css
@@ -1,5 +1,5 @@
 .feed {
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   --gap: var(--size-6);
 
   & > li > sl-card {
@@ -16,16 +16,20 @@
     }
   }
 
-  &:has(> li:nth-child(2)) > li:first-child {
-    grid-row: 1 / 2;
-  }
+  @media (width >= 768px) {
+    grid-template-columns: 1fr 1fr;
 
-  &:has(> li:nth-child(3)) > li:first-child {
-    grid-row: 1 / 3;
-  }
+    &:has(> li:nth-child(2)) > li:first-child {
+      grid-row: 1 / 2;
+    }
 
-  &:has(> li:nth-child(4)) > li:first-child {
-    grid-row: 1 / 4;
+    &:has(> li:nth-child(3)) > li:first-child {
+      grid-row: 1 / 3;
+    }
+
+    &:has(> li:nth-child(4)) > li:first-child {
+      grid-row: 1 / 4;
+    }
   }
 }
 
