--- a/src/includes/webmentions-facepile.njk
+++ b/src/includes/webmentions-facepile.njk
@@ -1,8 +1,8 @@
-<div class="webmentions__facepile">
+<div class="[ facepile ]">
 	{% for facepileMention in facepileMentions %}
-		<a href="{{ facepileMention.author.url }}" class="webmentions__face-link" target="_blank" rel="external noopener noreferrer">
-			<div class="webmention__author-photo-wrapper">
-				<img src="{{ facepileMention.author.photo or '/static/images/webmention-avatar-default.svg' }}" alt="{{ facepileMention.author.name }}" class="webmention__author-photo-image" loading="lazy" decoding="async" width="48" height="48">
+		<a href="{{ facepileMention.author.url }}" class="[ face-link ]">
+			<div class="[ author-photo-wrapper ]">
+				<img src="{{ facepileMention.author.photo or '/static/images/webmention-avatar-default.svg' }}" alt="{{ facepileMention.author.name }}" class="[ author-photo-image ]" loading="lazy" decoding="async" width="48" height="48">
 			</div>
 		</a>
 	{% endfor %}
