--- a/src/til.njk
+++ b/src/til.njk
@@ -10,13 +10,15 @@ eleventyNavigation:
 
 <div id="graph"></div>
 
-{% set til = collections.til | reverse %}
-<ul class="[ flow ]">
+{% set til = collections.til | sortByCreated | reverse %}
+<ul class="[ feed ]">
   {%- for post in til %}
     {% feedItem
     title = post.data.title,
     url = post.url,
-    excerpt = post.data.page.excerpt
+    excerpt = post.data.page.excerpt,
+    image = post.data.image,
+    created = post.data.created
  %}
   {%- endfor %}
 </ul>
