--- a/src/css/blocks/feed.css
+++ b/src/css/blocks/feed.css
@@ -1,35 +1,28 @@
 .feed {
-  grid-template-columns: 1fr;
-  --gap: var(--size-6);
+  column-count: auto;
+  column-width: var(--size-content-2);
+  column-fill: auto;
 
-  & > li > sl-card {
-    &,
-    &::part(base),
-    &::part(image),
-    & > [slot="image"],
-    & > [slot="image"] img {
-      block-size: 100%;
-    }
-
-    & > [slot="image"] img {
-      object-fit: cover;
-    }
+  & > li + li {
+    margin-block-start: var(--size-7);
   }
 
   @media (width >= 768px) {
-    grid-template-columns: 1fr 1fr;
+    column-count: 2;
+    column-width: auto;
 
-    &:has(> li:nth-child(2)) > li:first-child {
-      grid-row: 1 / 2;
+    & > li + li {
+      margin-block-start: var(--size-4);
     }
+  }
+}
 
-    &:has(> li:nth-child(3)) > li:first-child {
-      grid-row: 1 / 3;
-    }
+.home .feed {
+  column-count: auto;
+  column-width: var(--size-content-2);
 
-    &:has(> li:nth-child(4)) > li:first-child {
-      grid-row: 1 / 4;
-    }
+  & > li + li {
+    margin-block-start: var(--size-7);
   }
 }
 
