--- a/src/projects.njk
+++ b/src/projects.njk
@@ -10,13 +10,15 @@ navToHtmlOptions:
 
 <div id="graph"></div>
 
-{% set projects = collections.projects | reverse %}
-<ul class="[ flow ]">
+{% set projects = collections.projects | sortByCreated | reverse %}
+<ul class="[ feed ]">
   {%- for project in projects %}
     {% feedItem
     title = project.data.title,
     url = project.url,
-    excerpt = project.data.page.excerpt
+    excerpt = project.data.page.excerpt,
+    image = project.data.image,
+    created = project.data.created
  %}
   {%- endfor %}
 </ul>
