--- a/src/includes/meta.njk
+++ b/src/includes/meta.njk
@@ -17,7 +17,7 @@ overlayTag = tag %}
 
 {# General #}
 <meta name="description" content="{{ desc }}">
-<link rel="canonical" href="{{ absolutePageUrl }}">
+<link rel="canonical" href="{{ canonical }}">
 <meta name="author" content="{{ site.author.name }}">
 <meta name="generator" content="{{ eleventy.generator }}">
 
