--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -21,3 +21,17 @@
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
+
+@font-face {
+  font-family: "JetBrains Mono";
+  font-style: italic;
+  font-weight: 800;
+  font-display: optional;
+  src: local("JetBrains Mono ExtraBold Italic"),
+    local("JetBrainsMonoExtraBoldItalic"),
+    url("/public/assets/fonts/JetBrainsMono-ExtraBoldItalic.woff2")
+      format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
