--- a/src/includes/meta.njk
+++ b/src/includes/meta.njk
@@ -50,5 +50,5 @@ generateManifest = false %}
 
 {# Webmentions #}
 <link href="https://github.com/ellyloel" rel="me">
-<link rel="webmention" href="https://webmention.io/ellyloel.com/webmention"/>
-<link rel="pingback" href="https://webmention.io/ellyloel.com/xmlrpc"/>
+<link rel="webmention" href="https://webmention.io/www.ellyloel.com/webmention"/>
+<link rel="pingback" href="https://webmention.io/www.ellyloel.com/xmlrpc"/>
